finally happy to solve the images not showing problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 }
 
 html, body {
+  width: 100%;
   height: 100%;
 }
 
@@ -71,7 +72,7 @@ form {
 }
 
 .heroSection {
-  background-image: url("assets/images/hero.JPG");
+  background-image: url("../images/hero.jpg");
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -161,26 +162,26 @@ h3 {
 }
 
 #project1 {
-  background-image: url('assets/images/website-accessibility-test.JPG');
+  background-image: url('../images/website-accessibility-test.JPG');
   
 }
 
 #project2 {
-  background-image: url('assets/images/financeChallenge.JPG');
+  background-image: url('../images/financeChallenge.JPG');
   }
 
 #project3 {
   grid-column: 1/3;
-  background-image: url('assets/images/CityWonderer.JPG');
+  background-image: url('../images/CityWonderer.JPG');
   height: 500px;
 }
 
 #project4 {
-  background-image: url('assets/images/10-server-side-apis-challenge-demo.png');
+  background-image: url('../images/10-server-side-apis-challenge-demo.png');
 }
 
 #project5 {
-  background-image: url('assets/images/05-third-party-apis-homework-demo.gif');
+  background-image: url('../images/05-third-party-apis-homework-demo.gif');
 }
 
 footer {
